--- a/analysis/covariates.Rmd
+++ b/analysis/covariates.Rmd
@@ -85,7 +85,7 @@ eval<-cbind.data.frame(eval,c(1,2,3,4,5,6,7,8,9,10))
 colnames(eval)<-c("percent_var", "PC")
 
 #Make PCA plots:
-pdf("/home/rhea/account_wflow/covariates/pca_plots/clop_noac_hapmap_pca_plots.pdf")
+pdf("/home/rhea/account_wflow/covariates/pca_plots/clop_noac_hapmap_pca_plots.png")
 
 #Scree Plot
 ggplot(data=eval, aes(x=PC, y=percent_var)) + geom_point() + geom_line() + scale_x_continuous(breaks = 1:10) + ggtitle("Proportion of variance explained")
@@ -100,7 +100,6 @@ ggplot() + geom_point(data=pcdf,aes(x=PC1,y=PC3,col=pop,shape=pop)) + theme_bw()
 ggplot() + geom_point(data=pcdf,aes(x=PC2,y=PC3,col=pop,shape=pop)) + theme_bw() + scale_colour_brewer(palette="Set1") + ggtitle("PC2 vs PC3")
 
 dev.off() 
-
 ```
 
 ### Make the Covariate and Phenotype files
